--- a/fixed-teeth-crown-and-bridge.html
+++ b/fixed-teeth-crown-and-bridge.html
@@ -170,7 +170,7 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+9182977 21721">+9182977 21721</a>
+                            <a class="call-style-w3" href="tel:+918187835489">+918187835489</a>
                         </li>
                         <li><a href="/appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a>
                         </li>
@@ -191,7 +191,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+9182977 21721">82977 21721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">8187835489</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
