--- a/index.html
+++ b/index.html
@@ -48,10 +48,85 @@
                         </li>
                         <li class="nav-item  drop-down">
                             <a class="nav-link " href="/services.html">Services</a>
-                            <ul class="drop-items">
-                                <li><a href="./services/dentalconsultation.html">Denatl Consultation</a></li>
-                                <li><a href="./services/laser-dentistry.html">Laser Dentistry</a></li>
 
+                            <!-- <li><a href="./services/dentalconsultation.html">Denatl Consultation</a></li>
+                                <li><a href="./services/laser-dentistry.html">Laser Dentistry</a></li> -->
+                            <ul class="drop-items">
+
+                                <div class="yamm-content">
+                                    <div class="row">
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                            <ul>
+                                                <li><a href="root-canal-treatment-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Root Canal Treatment</a>
+                                                </li>
+                                                <li><a href="fixed-teeth-crown-and-bridge.html"><i
+                                                            class="fa fa-angle-right"></i>Fixed Teeth Crown And
+                                                        Bridge</a></li>
+                                                <li><a href="full-and-partial-dentures.html"><i
+                                                            class="fa fa-angle-right"></i>Full And Partial
+                                                        Dentures</a></li>
+                                                <li><a href="dental-implants-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Dental Implants</a></li>
+                                                <li><a href="teeth-cleaning-treatment-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Teeth Cleaning (Scaling)
+                                                        And Polishing</a></li>
+                                                <li><a href="teeth-whitening-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Teeth Whitening (
+                                                        Bleaching )</a></li>
+                                                <li><a href="pediatric-dental-care-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Pediatric Dental Care</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                            <ul>
+                                                <li><a href="pregnancy-guidance.html"><i
+                                                            class="fa fa-angle-right"></i>Pregnancy guidance</a>
+                                                </li>
+                                                <li><a href="infant-dental-checkup.html"><i
+                                                            class="fa fa-angle-right"></i>Infant Dental Checkup </a>
+                                                </li>
+                                                <li><a href="orthodontics-dental-treatment-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Orthodontics Dental
+                                                        Treatment</a></li>
+                                                <li><a href="cosmetic-dental-treatment-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Aesthetic and Cosmetic
+                                                        Dental Treatment </a></li>
+                                                <li><a href="tooth-colored-filling.html"><i
+                                                            class="fa fa-angle-right"></i>Tooth Colored Filling</a>
+                                                </li>
+                                                <li><a href="maxillo-facial-surgery.html"><i
+                                                            class="fa fa-angle-right"></i>Maxillo-Facial Surgery</a>
+                                                </li>
+                                                <li><a href="tmj-disorder-treatment.html"><i
+                                                            class="fa fa-angle-right"></i>Tmj Disorder Treatment</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                            <ul>
+                                                <li><a href="habit-correction.html"><i
+                                                            class="fa fa-angle-right"></i>Habit Correction</a></li>
+                                                <li><a href="preventive-dental-care.html"><i
+                                                            class="fa fa-angle-right"></i>Preventive Dental Care</a>
+                                                </li>
+                                                <li><a href="management-of-dental-traumatic-injuries.html"><i
+                                                            class="fa fa-angle-right"></i>Management of Dental
+                                                        Traumatic Injuries</a></li>
+                                                <li><a href="dental-management.html"><i
+                                                            class="fa fa-angle-right"></i>Dental management</a></li>
+                                                <li><a href="composite-fillings-and-veneers-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Composite fillings and
+                                                        veneers</a></li>
+                                                <li><a href="smile-designing-in-gandhinagar.html"><i
+                                                            class="fa fa-angle-right"></i>Smile Designing</a></li>
+                                                <li><a href="ct-scan.html"><i class="fa fa-angle-right"></i>CT
+                                                        scan</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
 
                             </ul>
                         </li>
@@ -88,8 +163,15 @@
     </header>
     <!-- //header -->
     <style>
-
+        .yamm-content {
+            padding: 20px 30px;
+        }
     </style>
+    <script>
+
+
+
+    </script>
     <!-- banner section -->
     <section class="w3l-main-slider" id="home">
         <div class="banner-content">
@@ -591,7 +673,7 @@
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. MVS Sudhir</a></li>
+                            <li><a href="#doctor">Dr. Anitha B</a></li>
                             <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
                             <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
                             <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li>
