--- a/about.html
+++ b/about.html
@@ -495,7 +495,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+9182977 21721">82977 21721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">8187835489</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
@@ -530,7 +530,7 @@
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. MVS Sudhir</a></li>
+                            <li><a href="#doctor">Dr. Anitha B</a></li>
                             <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
                             <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
                             <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li>
