--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+9182977 21721">82977 21721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">8187835489</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
