--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -10,8 +10,8 @@
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <!-- Template CSS Style link -->
-    <link rel="stylesheet" href="../assets/css/style-starter.css">
-    <link rel="icon" href="../assets/images/logo_icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style-starter.css">
+    <link rel="icon" href="./assets/images/logo_icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
-        <img src="../assets/images/logo_icon.png" alt="" style="width:150px;" />
+        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
         <div class="loader"></div>
     </div>
     <!--loader-->
@@ -35,7 +35,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <img src="../assets/images/logo.png" style="width: 100px;" />
+                    <img src="./assets/images/logo.png" style="width: 100px;" />
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -46,25 +46,23 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav ms-auto me-2 my-2 my-lg-0 navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../about.html">About</a>
+                            <a class="nav-link" href="./about.html">About</a>
                         </li>
                         <li class="nav-item  drop-down">
-                            <a class="nav-link active" href="../services.html">Services</a>
+                            <a class="nav-link active" href="./services.html">Services</a>
                             <ul class="drop-items">
-                                <li><a href="./dentalconsultation.html">Denatl Consultation</a></li>
-                                <li><a href="./laser-dentistry.html">Laser Dentistry</a></li>
 
 
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../appointment.html">Book An Appointment</a>
+                            <a class="nav-link" href="./appointment.html">Book An Appointment</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../contact.html">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
                     <form action="#error" method="GET" class="d-flex search-header">
@@ -107,59 +105,151 @@
         </div>
     </section>
     <!-- //inner banner -->
+    <style>
+        .heading {
+            background-color: #19afdd;
 
-    <!-- serviceblock1 section -->
+        }
 
-    <!-- //serviceblock1 section -->
+        .heading h3 {
+            padding: 1rem;
 
+        }
+
+        .treatment-list li {
+            padding: 10px 0;
+        }
+
+        .treatment-list li a {
+            display: table;
+            width: 100%;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 19.6px;
+            color: #353535;
+        }
+
+        .treatment-image {
+            margin-bottom: 70px;
+        }
+
+        .treatment-image {
+            overflow: hidden;
+            position: relative;
+        }
+
+        .treatment-image img {
+            transition: all .3s ease-out;
+        }
+
+        .treatment-image:hover img {
+            transform: scale(1.1);
+
+        }
+
+        .treatment-content p {
+            font-size: 13px;
+            margin-bottom: 30px;
+        }
+    </style>
+    <div class="heading">
+        <h3 class="title-style mb-3">ROOT CANAL TREATMENT</h3>
+    </div>
     <!-- serviceblock2 section -->
-    <section class="w3l-homeblock1 py-5" id="about">
+    <section class="w3l-homeblock1 pb-5" id="about">
         <div class="container py-md-5 py-4">
             <div class="row align-items-center">
-                <div class="col-lg-6 pe-xl-5">
-                    <h3 class="title-style mb-3">About <span>Denatl Consultation</span></h3>
-                    <p>
+                <div class="col-lg-8 homeaboutblock mt-lg-0 mt-5">
+                    <div class="treatment-image">
+                        <img src="./assets/images/dental-treatment_Root-Canal-Treatment.jpg"
+                            class="img-fluid radius-image" alt="v-smilez Dental Care">
+                    </div>
+                    <div class="treatment-content">
+                        <p>In our modern and welcoming clinic, we utilize advanced technology to enhance diagnostics and
+                            treatment
+                            precision. From routine check-ups to more complex dental procedures, our dedicated
+                            professionals
+                            are
+                            committed to delivering exceptional care in a warm and friendly environment. Your dental
+                            consultation
+                            marks the beginning of a partnership in achieving and maintaining optimal oral health, and
+                            we
+                            are here
+                            to guide you on your journey to a confident and radiant smile. </p>
+                    </div>
+                    <div class="treatment-content">
+                        <p>
 
-                        Dental consultations at our clinic are tailored to provide comprehensive and personalized care
-                        for your oral health. Our expert dental professionals are committed to understanding your unique
-                        needs and concerns, ensuring a comfortable and informative experience. During the consultation,
-                        we conduct thorough examinations, including dental health assessments, X-rays, and evaluations
-                        of your oral hygiene practices.</p>
-                    <p>
-                        Our team takes the time to discuss your dental history, address any immediate issues, and
-                        formulate a customized treatment plan. Whether you seek preventive care, cosmetic enhancements,
-                        or restorative procedures, we prioritize open communication and patient education. We believe in
-                        empowering our patients with knowledge to make informed decisions about their oral well-being.
-                    </p>
+                            Dental consultations at our clinic are tailored to provide comprehensive and personalized
+                            care
+                            for your oral health. Our expert dental professionals are committed to understanding your
+                            unique
+                            needs and concerns, ensuring a comfortable and informative experience. During the
+                            consultation,
+                            we conduct thorough examinations, including dental health assessments, X-rays, and
+                            evaluations
+                            of your oral hygiene practices.</p>
+                    </div>
 
                 </div>
-                <div class="col-lg-6 homeaboutblock mt-lg-0 mt-5">
-                    <img src="../assets/images/s4.jpg" class="img-fluid radius-image" alt="v-smilez Dental Care">
+                <div class="col-lg-4 pe-xl-5">
+                    <h3 class="title-style mb-3 list-heading">TREATMENTS</h3>
+                    <ul class="treatment-list">
+                        <li><a href="./root-canal-treatment.html"><i class="fa fa-arrow-circle-right"></i> Root Canal
+                                Treatment </a>
+                        </li>
+                        <li><a href="./fixed-teeth-crown-and-bridge.html"><i class="fa fa-arrow-circle-right"></i> Fixed
+                                Teeth Crown And Bridge</a></li>
+                        <li><a href="./full-and-partial-Dentures.html"><i class="fa fa-arrow-circle-right"></i> Full And
+                                Partial Dentures</a></li>
+                        <li><a href="./dental-implants.html"><i class="fa fa-arrow-circle-right"></i> Dental
+                                Implants</a></li>
+                        <li><a href="./teeth-cleaning-scaling-and-polishing.html"><i
+                                    class="fa fa-arrow-circle-right"></i> Teeth Cleaning (Scaling) And
+                                Polishing</a></li>
+                        <li><a href="./teeth-whitening.html"><i class="fa fa-arrow-circle-right"></i> Teeth Whitening (
+                                Bleaching )</a></li>
+                        <li><a href="./pediatric-dental-care.html"><i class="fa fa-arrow-circle-right"></i> Pediatric
+                                Dental Care</a></li>
+                        <li><a href="./pregnancy-guidance.html"><i class="fa fa-arrow-circle-right"></i> Pregnancy
+                                guidance</a></li>
+                        <li><a href="./infant-dental-checkup.html"><i class="fa fa-arrow-circle-right"></i> Infant
+                                Dental Checkup</a></li>
+                        <li><a href="./aesthetic-and-cosmetic-dental-treatment.html"><i
+                                    class="fa fa-arrow-circle-right"></i> Aesthetic and Cosmetic Dental Treatment
+                            </a></li>
+                        <li><a href="./tooth-colored-filling.html"><i class="fa fa-arrow-circle-right"></i> Tooth
+                                Colored Filling</a></li>
+                        <li><a href="./maxillo-facial-surgery.html"><i class="fa fa-arrow-circle-right"></i>
+                                Maxillo-Facial Surgery</a></li>
+                        <li><a href="./tmj-disorder-treatment.html"><i class="fa fa-arrow-circle-right"></i> Tmj
+                                Disorder Treatment</a></li>
+                        <li><a href="./habit-correction.html"><i class="fa fa-arrow-circle-right"></i> Habit
+                                Correction</a></li>
+                        <li><a href="./preventive-dental-care.html"><i class="fa fa-arrow-circle-right"></i> Preventive
+                                Dental Care</a></li>
+                        <li><a href="./management-of-dental-traumatic-Injuries.html"><i
+                                    class="fa fa-arrow-circle-right"></i> Management of Dental Traumatic
+                                Injuries</a></li>
+                        <li><a href="./dental-management.html"><i class="fa fa-arrow-circle-right"></i> Dental
+                                management</a></li>
+                        <li><a href="./composite-fillings-and-veneers.html"><i class="fa fa-arrow-circle-right"></i>
+                                Composite fillings and veneers</a></li>
+                        <li><a href="./smile-designing.html"><i class="fa fa-arrow-circle-right"></i> Smile
+                                Designing</a></li>
+                        <li><a href="./orthopantomogram.html"><i class="fa fa-arrow-circle-right"></i>
+                                Orthopantomogram</a></li>
+                    </ul>
                 </div>
+
             </div>
-            <p>In our modern and welcoming clinic, we utilize advanced technology to enhance diagnostics and treatment
-                precision. From routine check-ups to more complex dental procedures, our dedicated professionals are
-                committed to delivering exceptional care in a warm and friendly environment. Your dental consultation
-                marks the beginning of a partnership in achieving and maintaining optimal oral health, and we are here
-                to guide you on your journey to a confident and radiant smile. </p>
+
         </div>
 
     </section>
     <!-- //serviceblock2 section -->
 
-    <section>
-        <div class="container text-center">
-            <h3 class="title-style mb-3" style="text-decoration:1px underline #46b7de;">Related <span>Services</span>
-            </h3>
-            <ul class="py-2">
-                <li><a href="./laser-dentistry.html"><span style="margin-right: 3px;">&#8594;</span>Laser Dentistry</a>
-                </li>
-                <li><a href="#"><span style="margin-right: 3px;">&#8594;</span>Preventive-Dentistry</a></li>
-                <li><a href="#"><span style="margin-right: 3px;">&#8594;</span>Tooth-Colored-Fillings</a></li>
 
-            </ul>
-        </div>
-    </section>
 
     <!-- call section -->
     <section class="w3l-call-to-action-6">
@@ -172,7 +262,7 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+9182977 21721">+9182977 21721</a>
+                            <a class="call-style-w3" href="tel:+918187835489">+918187835489</a>
                         </li>
                         <li><a href="/appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a>
                         </li>
@@ -193,7 +283,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+9182977 21721">82977 21721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">8187835489</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
@@ -225,7 +315,7 @@
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. MVS Sudhir</a></li>
+                            <li><a href="#doctor">Dr. Anitha B</a></li>
                             <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
                             <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
                             <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li>
@@ -255,11 +345,11 @@
     <!-- //move top -->
 
     <!-- common jquery plugin -->
-    <script src="../assets/js/jquery-3.3.1.min.js"></script>
+    <script src="./assets/js/jquery-3.3.1.min.js"></script>
     <!-- //common jquery plugin -->
 
     <!-- theme switch js (light and dark)-->
-    <script src="../assets/js/theme-change.js"></script>
+    <script src="./assets/js/theme-change.js"></script>
     <!-- //theme switch js (light and dark)-->
 
     <!-- MENU-JS -->
@@ -318,7 +408,7 @@
     <!-- //disable body scroll which navbar is in active -->
 
     <!-- bootstrap -->
-    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
     <!-- //bootstrap -->
     <!-- //Js scripts -->
 </body>
