--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -12,145 +12,13 @@
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="./assets/css/style-starter.css">
     <link rel="icon" href="./assets/images/logo_icon.png" type="image/x-icon">
+
 </head>
 
 <body>
-    <!-- //home block 2 -->
-    <div class="whatsapp">
-        <a href="https://wa.me/+918187835489">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-    </div>
-
-    <!-- header -->
-
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen">
-        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
-        <div class="loader"></div>
-    </div>
-    <!--loader-->
-    <!-- header -->
-    <header id="site-header" class="fixed-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html">
-                    <img src="./assets/images/logo.png" style="width: 100px;" />
-                </a>
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-                    <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav ms-auto me-2 my-2 my-lg-0 navbar-nav-scroll">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./about.html">About</a>
-                        </li>
-                        <li class="nav-item  drop-down">
-                            <a class="nav-link active" href="./services.html">Services</a>
-                            <ul class="drop-items">
-
-
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./appointment.html">Book An Appointment</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
-                    <form action="#error" method="GET" class="d-flex search-header">
-                        <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
-                            required>
-                        <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
-                    </form>
-                </div>
-                <!-- toggle switch for light and dark theme -->
-                <div class="cont-ser-position">
-                    <nav class="navigation">
-                        <div class="theme-switch-wrapper">
-                            <label class="theme-switch" for="checkbox">
-                                <input type="checkbox" id="checkbox">
-                                <div class="mode-container">
-                                    <i class="gg-sun"></i>
-                                    <i class="gg-moon"></i>
-                                </div>
-                            </label>
-                        </div>
-                    </nav>
-                </div>
-                <!-- //toggle switch for light and dark theme -->
-            </nav>
-        </div>
-    </header>
-    <!-- //header -->
-
-    <!-- inner banner -->
-    <section class="inner-banner py-5">
-        <div class="w3l-breadcrumb py-lg-5">
-            <div class="container pt-4 pb-sm-4">
-                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">Our Services</h4>
-                <ul class="breadcrumbs-custom-path">
-                    <li><a href="/">Home</a></li>
-                    <li class="active"><i class="fas fa-angle-right mx-2"></i>Services<i
-                            class="fas fa-angle-right mx-2"></i>Denatl Consultation</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <!-- //inner banner -->
+    <div id="header"></div>
     <style>
-        .heading {
-            background-color: #19afdd;
 
-        }
-
-        .heading h3 {
-            padding: 1rem;
-
-        }
-
-        .treatment-list li {
-            padding: 10px 0;
-        }
-
-        .treatment-list li a {
-            display: table;
-            width: 100%;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 19.6px;
-            color: #353535;
-        }
-
-        .treatment-image {
-            margin-bottom: 70px;
-        }
-
-        .treatment-image {
-            overflow: hidden;
-            position: relative;
-        }
-
-        .treatment-image img {
-            transition: all .3s ease-out;
-        }
-
-        .treatment-image:hover img {
-            transform: scale(1.1);
-
-        }
-
-        .treatment-content p {
-            font-size: 13px;
-            margin-bottom: 30px;
-        }
     </style>
     <div class="heading">
         <h3 class="title-style mb-3">ROOT CANAL TREATMENT</h3>
@@ -248,108 +116,48 @@
 
     </section>
     <!-- //serviceblock2 section -->
+    <div id="footer"></div>
 
 
-
-    <!-- call section -->
-    <section class="w3l-call-to-action-6">
-        <div class="container py-md-5 py-sm-4 py-5">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div class="left-content-call">
-                    <h3 class="title-big">Visit Now!</h3>
-                    <p class="text-white mt-1">Begin the change today</p>
-                </div>
-                <div class="right-content-call mt-sm-0 mt-4">
-                    <ul class="buttons">
-                        <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+918187835489">+918187835489</a>
-                        </li>
-                        <li><a href="/appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //call section -->
-
-    <!-- footer -->
-    <footer class="w3l-footer-29-main">
-        <div class="footer-29 pt-5 pb-4">
-            <div class="container pt-md-4">
-                <div class="row footer-top-29">
-                    <div class="col-md-5 footer-list-29 pe-xl-5">
-                        <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
-                            Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
-                        </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">8187835489</a></p>
-                        <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
-                    </div>
-                    <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
-                        <ul>
-                            <h6 class="footer-title-29">About</h6>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="about.html">Special Offers</a></li>
-                            <li><a href="about.html">Orthodontics</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
-                        <ul>
-                            <h6 class="footer-title-29">Social Links</h6>
-                            <li><a href="#"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
-                                    Instagram</a>
-                            </li>
-                            <li><a href="#"><i class="fab fa-facebook"
-                                        style="columns: white;margin-right: 5px;"></i>Facebook</a>
-                            </li>
-                            <li><a href="#"><i class="fab fa-twitter"
-                                        style="columns: white;margin-right: 5px;"></i>Twitter</a>
-                            </li>
-                            <li><a href="#"><i class="fab fa-linkedin"
-                                        style="columns: white;margin-right: 5px;"></i>Linkedin</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
-                        <ul>
-                            <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. Anitha B</a></li>
-                            <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
-                            <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
-                            <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-1 pb-2">© 2024 V-Smilez Dental. All rights reserved.
-                    Design by
-                    <a href="https://www.thepatternscompany.com/" target="_blank">
-                        The Patterns Company</a>
-                </p>
-                <!-- //copyright -->
-            </div>
-        </div>
-    </footer>
-    <!-- //footer -->
-
-    <!-- Js scripts -->
-    <!-- move top -->
-    <button onclick="topFunction()" id="movetop" title="Go to top">
-        <span class="fas fa-level-up-alt" aria-hidden="true"></span>
-    </button>
     <script>
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
 
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("movetop").style.display = "block";
+            } else {
+                document.getElementById("movetop").style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
     </script>
-    <!-- //move top -->
 
+
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <script>
+        $("#header").load("header.html");
+        $("#footer").load("footer.html")
+    </script>
     <!-- common jquery plugin -->
-    <script src="./assets/js/jquery-3.3.1.min.js"></script>
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+
     <!-- //common jquery plugin -->
 
+    <!-- for services carousel slider -->
+    <script src="assets/js/owl.carousel.js"></script>
     <!-- theme switch js (light and dark)-->
-    <script src="./assets/js/theme-change.js"></script>
+    <script src="assets/js/theme-change.js"></script>
     <!-- //theme switch js (light and dark)-->
 
     <!-- MENU-JS -->
@@ -378,22 +186,6 @@
                 }
             });
         });
-        // loader
-        var loader = function () {
-            // Show loader
-            $("#ftco-loader").addClass("show");
-
-            // Hide loader after document is fully loaded
-            window.onload = function () {
-                setTimeout(function () {
-                    if ($("#ftco-loader").length > 0) {
-                        $("#ftco-loader").removeClass("show");
-                    }
-                }, 1000);
-            };
-        };
-
-        loader();
     </script>
     <!-- //MENU-JS -->
 
@@ -408,9 +200,8 @@
     <!-- //disable body scroll which navbar is in active -->
 
     <!-- bootstrap -->
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <!-- //bootstrap -->
-    <!-- //Js scripts -->
+    <script src="assets/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
