--- a/footer.html
+++ b/footer.html
@@ -102,7 +102,12 @@
 
     <!-- //move top -->
 
-
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen">
+        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
+        <div class="loader"></div>
+    </div>
+    <!--loader-->
 </body>
 
 </html>
