--- a/header.html
+++ b/header.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen">
-        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
-        <div class="loader"></div>
-    </div>
-    <!--loader-->
+
     <!-- header -->
     <header id="site-header" class="fixed-top">
         <div class="container">
@@ -81,7 +77,7 @@
     <section class="inner-banner py-5">
         <div class="w3l-breadcrumb py-lg-5">
             <div class="container pt-4 pb-sm-4">
-                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">About Us</h4>
+                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">Services</h4>
                 <ul class="breadcrumbs-custom-path">
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><i class="fas fa-angle-right mx-2"></i>Services</li>
