--- a/root-canal-treatment.html
+++ b/root-canal-treatment.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style-starter.css">
     <link rel="icon" href="./assets/images/logo_icon.png" type="image/x-icon">
 
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
 <body>
@@ -115,6 +116,11 @@
         </div>
 
     </section>
+    <script>
+
+
+
+    </script>
     <!-- //serviceblock2 section -->
     <div id="footer"></div>
 
@@ -141,21 +147,18 @@
     </script>
 
 
+    <!-- <script src="assets/js/jquery-3.3.1.min.js"></script> -->
 
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
-    <script>
-        $("#header").load("header.html");
-        $("#footer").load("footer.html")
-    </script>
     <!-- common jquery plugin -->
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
-
+    <!-- common jquery plugin -->
+    <!-- <script src="assets/js/jquery-3.3.1.min.js"></script> -->
     <!-- //common jquery plugin -->
 
     <!-- for services carousel slider -->
     <script src="assets/js/owl.carousel.js"></script>
+
+    <!-- //for services carousel slider -->
+
     <!-- theme switch js (light and dark)-->
     <script src="assets/js/theme-change.js"></script>
     <!-- //theme switch js (light and dark)-->
@@ -201,6 +204,32 @@
 
     <!-- bootstrap -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <!-- //bootstrap -->
+    <!-- //Js scripts -->
+    <script>$(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+
+        // loader
+        var loader = function () {
+            // Show loader
+            $("#ftco-loader").addClass("show");
+
+            // Hide loader after document is fully loaded
+            window.onload = function () {
+                setTimeout(function () {
+                    if ($("#ftco-loader").length > 0) {
+                        $("#ftco-loader").removeClass("show");
+                    }
+                }, 1000);
+            };
+        };
+
+        loader();
+
+
+    </script>
 
 </body>
 
