--- a/fixed-teeth-crown-and-bridge.html
+++ b/fixed-teeth-crown-and-bridge.html
@@ -34,30 +34,15 @@
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>In our modern and welcoming clinic, we utilize advanced technology to enhance diagnostics and
-                            treatment
-                            precision. From routine check-ups to more complex dental procedures, our dedicated
-                            professionals
-                            are
-                            committed to delivering exceptional care in a warm and friendly environment. Your dental
-                            consultation
-                            marks the beginning of a partnership in achieving and maintaining optimal oral health, and
-                            we
-                            are here
-                            to guide you on your journey to a confident and radiant smile. </p>
+                        <p>A 'Dental Crown 'or "cap" is a fixed prosthetic device, used to entirely cover a damaged teeth, to provide strength to the damaged teeth, improving its appearance, shape or alignment.
+                           A 'Dental Bridge 'may be recommended if there is missing one or more teeth. They span the space where teeth are missing.
+                            For longevity of crown and bridges, one should maintain good oral hygiene and healthy gums. For this, brushing with fluoridated toothpaste twice a day and dental flossing is advisable.. </p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Dental consultations at our clinic are tailored to provide comprehensive and personalized
-                            care
-                            for your oral health. Our expert dental professionals are committed to understanding your
-                            unique
-                            needs and concerns, ensuring a comfortable and informative experience. During the
-                            consultation,
-                            we conduct thorough examinations, including dental health assessments, X-rays, and
-                            evaluations
-                            of your oral hygiene practices.</p>
+                            Also, regular dental checkups and professional teeth cleaning is advisable, to protect new crown or bridge at certain intervals.
+                            At Devansh Radiology & Imaging Clinic we have a wide range of fixed teeth crown and Bridges available for you to bring your beautiful smile back and help you live stress free by increasing your esthetic and chewing efficiency.</p>
                     </div>
 
                 </div>
