--- a/dental-implants.html
+++ b/dental-implants.html
@@ -22,7 +22,7 @@
 
     </style>
     <div class="heading">
-        <h3 class="title-style mb-3">DENTAL IMPLANTS</h3>
+        <h3 class="title-style mb-3">CT SCAN</h3>
     </div>
     <!-- serviceblock2 section -->
     <section class="w3l-homeblock1 pb-5" id="about">
@@ -30,21 +30,16 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 homeaboutblock mt-lg-0 mt-5">
                     <div class="treatment-image">
-                        <img src="./assets/images/Dental-Implant.jpeg"
+                        <img src="./assets/images/"
                             class="img-fluid radius-image" alt="v-smilez Dental Care">
                     </div>
                     <div class="treatment-content">
-                        <p>A Dental Implant is an artificial tooth root that is placed into your jaw, to hold are placement tooth or bridge.
-                            Dental implants may be an option for people who have lost a tooth or teeth due to periodontal (gum) diseases, an injury or some other reasons.
-                            The ideal candidate for a dental implant is one who is in good general and oral health. Adequate bone in your jaw is needed to support the implant and the best candidates should have healthy gums, free from periodontal diseases.
-                            Depending on one's specific condition and the type of implant chosen, a dentist will create a treatment plan to meet your needs.</p>
+                        <p>CT produces information that can be controlled so as to show different substantial structures dependent on their capacity to ingest the X-beam bar. Albeit, generally, the pictures produced were in the pivotal or transverse plane, opposite to the long hub of the body, present day scanners enable this volume of information to be reformatted in different planes or even as volumetric (3D) portrayals of structures.</p>
                     </div>
                     <div class="treatment-content">
                         <p>
 
-                            Dental implants can be given in a patient, if a single tooth is missing, if several teeth are missing (implant supported bridges) or if replacing all teeth (implant supported full dentures).
-Just like our own natural teeth, dental implants also require same care. In order, to keep your implants clean and plaque free, brushing and flossing are advisable.
-At Devansh Radiology & Imaging Clinic we have a Unique Multi-specialty approach of giving dental implant which increases the chances of implant success and decreases the chances of failure</p>
+                            Albeit generally regular in medication, CT is additionally utilized in different fields, for example, nondestructive materials testing. Another model is archeological uses, for example, imaging the substance of stone coffins or ceramics. Individuals liable for performing CT tests are called radiographers or radiologic technologists.</p>
                     </div>
 
                 </div>
